# Robotika

./: .gitignore  main.cpp
BearRescue/: run.sh
CostMap/: CMakeLists.txt  cost_map.cpp  cost_map.hpp
CostMap/Movements/: movements.hpp
CostMap/PayoffObjects/: payoff_circle.cpp  payoff_circle.hpp  payoff_elipse.cpp  payoff_elipse.hpp  payoff_object.hpp  payoff_occupancy_map.cpp  payoff_occupancy_map.hpp
Display/: CMakeLists.txt  Makefile  display.cpp  display.h
FrameConvert/: CMakeLists.txt  frame_converter.cpp  frame_converter.hpp
Grid/: grid.hpp  grid_iterator.hpp
MCL/: CMakeLists.txt  mcl.cpp  mcl.hpp  particle.hpp  particle2D.cpp  particle2D.hpp  particle_visitor.hpp  visitor.hpp  visitorMove.hpp  visitorState.hpp
MCL/particles/: particle.hpp  particle2D.cpp  particle2D.hpp  particle2D_map.hpp
MCL/visitors/: visitor.hpp  visitorBest.hpp  visitorMove.hpp  visitorScan.hpp  visitorScanMap.hpp  visitorState.hpp  visitorStateVariance.hpp  visitorUpdateMap.hpp
Map/: CMakeLists.txt  map_interface.hpp
Map/OccupancyMap/: occupancy_map.cpp  occupancy_map.hpp  occupancy_updater.cpp  occupancy_updater.hpp
SerialGPS/: serialPort.cpp  serialPort.h
Settings/: CMakeLists.txt  settings.cpp  settings.hpp
Tim310_driver/: Makefile  main.cpp  tim310.cpp  tim310.h
logs/: 2014-04-17-14-21-56.bag  2014-04-24-08-08-41.bag  2014-05-14-08-55-18.bag  2014-05-14-08-56-38.bag  2014-05-21-12-57-51.bag  2014-05-21-12-58-24.bag  2014-05-21-12-59-14.bag  2014-05-22-13-22-02.bag  forward.bag  forward_1.5.bag  hall3.bag  hall_1.bag  hall_2.bag  hall_new.bag  room.bag  stop.bag  (+3 more)
(+70 files in other folders)
